# pixl-factory

./: AGENTS.md  CLAUDE.md  Cargo.toml  NOTICE  README.md  graph.fabro  run.json  validation.txt
.ai/: card-game-fast-plan.md  card-game-fast-verify.md  solitaire-spec.md  verify_data.md
.claude/rules/: 0ba59d63-b106-4111-a75e-cb18a23f7c56.md  0c99d9c0-10fb-40b3-bc7d-6f69d4cd5498.md  1267d2fe-4cfa-4c45-9004-ada782af479d.md  19fbda95-be0a-43ce-88bd-b2cbb1c4075a.md  36c17245-9a45-4855-affd-3e23712797d8.md  372c20f8-a9ae-4489-b3a3-4825d3343af4.md  4dbd1df3-2cdc-4996-a874-d94ee89c9983.md  57fb44e9-c959-408b-9e6a-87b058b1ecc7.md  5b2054c7-ba4e-44f2-b4ee-faacb67305d6.md  67d628ca-c9de-4922-93cb-1fd54450f492.md  860946d2-f81f-45ed-b3f2-25c8d5f4956f.md  8743e5ed-c257-4d49-8295-a4481f8523b5.md  9607dcb3-91d3-44b9-85f9-ccb1fa25bd76.md  a4786ef4-01e0-4b65-9c9f-0c3175726c86.md  b1a53926-9804-45b7-9543-634d35c15734.md  c81e5425-fcc1-4177-9246-bd167e4322af.md  da815559-806f-4816-ac62-f2bcba187047.md  e5731ea0-1ffc-4e87-b5f7-07551952f609.md  f1ba5186-840f-4423-9876-d7cb8ec75614.md  f39ea92e-c1c0-46b6-b4ff-9c07cc3b42b7.md  f5680bc5-1992-44e9-92a3-65214350b7a7.md  fcd6a21d-756b-4d3f-98d7-f42d21122afd.md
.fabro/: Dockerfile  project.toml
.github/workflows/: nightly.yml
apps/fabro-web/: index.template.html  package.json
apps/marketing/: font-comparison.html
card-game-app/: README.md  game.py  main.py  pyproject.toml  test_engine.py  test_game.py  ui.py
card-game-app/src/card_game_tui/: __init__.py  domain.py  game.py  tui.py  ui.py
card-game-app/tests/: __init__.py  test_domain.py  test_engine.py  test_game.py  test_rules.py  test_state.py
docs/adr/: 0ba59d63-b106-4111-a75e-cb18a23f7c56-standardize-server-sent-events-sse-for-real-time-configuration-and-runtime-state-updates-route-handlers-properly.md  0c99d9c0-10fb-40b3-bc7d-6f69d4cd5498-standardize-server-sent-events-sse-for-real-time-configuration-and-runtime-state-updates-sse-connections-implement.md  1267d2fe-4cfa-4c45-9004-ada782af479d-adopt-distributed-tracing-for-public-api-observability-public-external-endpoints.md  19fbda95-be0a-43ce-88bd-b2cbb1c4075a-adopt-distributed-tracing-for-public-api-observability-each-trace-span.md  36c17245-9a45-4855-affd-3e23712797d8-adopt-distributed-tracing-for-public-api-observability-tracing-implementations-propagate.md  372c20f8-a9ae-4489-b3a3-4825d3343af4-adopt-distributed-tracing-for-public-api-observability-implementations-create-child.md  4dbd1df3-2cdc-4996-a874-d94ee89c9983-adopt-distributed-tracing-for-public-api-observability-internal-private-use.md  57fb44e9-c959-408b-9e6a-87b058b1ecc7-standardize-server-sent-events-sse-for-real-time-configuration-and-runtime-state-updates-sse-implementations-support.md  5b2054c7-ba4e-44f2-b4ee-faacb67305d6-standardize-server-sent-events-sse-for-real-time-configuration-and-runtime-state-updates-sse-implementations-utilize.md  67d628ca-c9de-4922-93cb-1fd54450f492-standardize-service-boundary-logging-for-observability-service-boundary-logs.md  860946d2-f81f-45ed-b3f2-25c8d5f4956f-standardize-service-boundary-logging-for-observability-log-levels-service.md  8743e5ed-c257-4d49-8295-a4481f8523b5-standardize-service-boundary-logging-for-observability-service-boundary-logging.md  9607dcb3-91d3-44b9-85f9-ccb1fa25bd76-adopt-distributed-tracing-for-public-api-observability-tracing-instrumentation-not.md  (+9 more)
lib/crates/fabro-automation/: Cargo.toml
lib/crates/fabro-automation/src/: error.rs  id.rs  lib.rs  model.rs  store.rs
lib/crates/fabro-llm/: Cargo.toml
lib/crates/fabro-llm/src/: adapter_registry.rs  client.rs  model_test.rs
lib/crates/fabro-llm/src/codec/: mod.rs
lib/crates/fabro-llm/src/codec/anthropic_messages/: stream.rs
lib/crates/fabro-llm/src/codec/bedrock_converse/: decode.rs  encode.rs  mod.rs  stream.rs
lib/crates/fabro-llm/src/codec/openai_compatible/: request.rs
lib/crates/fabro-llm/src/codec/openai_responses/: decode.rs
lib/crates/fabro-llm/src/providers/: mod.rs
lib/crates/fabro-llm/src/providers/bedrock/: eventstream.rs  mod.rs  sigv4.rs
lib/crates/fabro-llm/tests/: integration.rs
lib/crates/fabro-mcp-server/: Cargo.toml
lib/crates/fabro-mcp-server/src/: config.rs  lib.rs  run_tools.rs  server.rs
lib/crates/fabro-mcp-server/src/run_tools/: common.rs  create.rs  events.rs  gather.rs  interact.rs  manifest.rs  search.rs
skills/: README.md
solitaire-app/: main.py  test_game.py  ui.py
test/: templated_unbound.fabro
(+687 files in other folders)
