[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "card_game_tui"
version = "0.1.0"
description = "A terminal-based FreeCell solitaire game in Python"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
