[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "card_game_tui"
version = "0.1.0"
description = "A terminal-based Klondike Solitaire game in Python using curses"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Gemini CLI"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Environment :: Console :: Curses",
]
dependencies = []

[project.scripts]
card-game-tui = "card_game_tui.tui:main"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
pythonpath = ["src"]
