[package]
name = "fabro-automation"
edition.workspace = true
version.workspace = true
publish = false
license.workspace = true
description = "Automation domain model and file-backed store"

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
chrono.workspace = true
croner = "3.0.1"
hex.workspace = true
serde.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
toml_edit.workspace = true

[dev-dependencies]
tempfile = "3"
