[package]
name = "fabro-mcp-server"
edition.workspace = true
version.workspace = true
publish = false
license.workspace = true
description = "Fabro MCP stdio server"

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
dirs.workspace = true
fabro-client = { path = "../fabro-client" }
rmcp = { workspace = true, features = ["server", "macros", "schemars", "transport-io"] }
schemars = "1.2.1"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
